<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
    tools:context="com.example.oscar.enbicia2.LoginActivity">

    <!-- Login progress -->

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_vertical"

            android:orientation="vertical">


            <ImageView
                android:id="@+id/logo"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/logo" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/emailStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:paddingTop="20dp">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/passStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailStyle">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>
            <TextView
                android:id="@+id/olvido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/passStyle"
                android:text="@string/forget_password"
                />

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/olvido"
                android:layout_marginTop="16dp"
                android:text="@string/title_activity_login"
                android:textStyle="bold"
                android:background="@drawable/button"
                android:textColor="@color/blanco"
                />

            <TextView
                android:id="@+id/continua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_sign_in_button"
                android:layout_centerHorizontal="true"
                android:text="@string/continua"
                android:layout_marginTop="15dp"/>
            <RelativeLayout
                android:id="@+id/logins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/continua">
            <Button
                android:id="@+id/google"
                style="?android:textAppearanceSmall"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/facebook"
                android:layout_weight="0.5"
                android:background="@drawable/google"
                android:drawableLeft="@drawable/ic_google_plus"
                android:drawablePadding="2dp"
                android:paddingLeft="30dp"
                android:text="google"
                android:textColor="@color/blanco"
                android:textStyle="bold" />

            <Button
                android:id="@+id/facebook"
                style="?android:textAppearanceSmall"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_toRightOf="@id/google"
                android:layout_weight="0.5"
                android:background="@drawable/fb"
                android:drawableLeft="@drawable/ic_facebook"
                android:drawablePadding="2dp"
                android:paddingLeft="30dp"
                android:text="facebook"
                android:textColor="@color/blanco"
                android:textStyle="bold"
                android:layout_marginLeft="30dp"/>
            </RelativeLayout>

            <Button
                android:layout_centerHorizontal="true"
                android:id="@+id/registrarse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/logins"
                android:text="@string/action_sign_in"
                android:layout_marginTop="30dp"
                android:background="@color/blanco"
                />



        </RelativeLayout>
    </ScrollView>


</LinearLayout>
