<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.oscar.enbicia2.SignIn"
    android:background="@color/background"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <ImageView
        android:id="@+id/imageView"
        android:layout_width="119dp"
        android:layout_height="124dp"
        app:srcCompat="@drawable/logo" />
        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_in"
            android:layout_gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_marginLeft="30dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/blanco"
        android:padding="10dp"
        android:layout_marginTop="30dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/usertag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            >
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"

            />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/mailtag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            >

        <EditText
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/celltag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Teléfono celular"
            >
            <EditText
                android:id="@+id/cellphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/birthtag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Fecha de Nacimiento"
            >
        <EditText
            android:id="@+id/birth"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passtag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Contraseña"
            >
        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/pass2tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Confirmar contraseña"
            >
        <EditText
            android:id="@+id/confirmpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>
        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Acepta los términos y condiciones" />
    </LinearLayout>

    <Button
        android:id="@+id/registrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/action_sign_in"
        android:layout_marginTop="30dp"
        android:textColor="@color/blanco"/>

    <Button
        android:layout_gravity="center"
        android:id="@+id/volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logins"
        android:text="Volver"
        android:layout_marginTop="30dp"
        android:background="@color/blanco"
        />


</LinearLayout>
